# task2_ws

./: .gitignore  README.md  TASK.md
src/camera_analysis/: README.md  package.xml  setup.cfg  setup.py
src/camera_analysis/camera_analysis/: camera_node.py
src/perception_interfaces/: CMakeLists.txt  package.xml
src/perception_interfaces/msg/: BoundingBox.msg  DetectionList.msg  SceneAnalysis.msg  SceneObject.msg  SecurityAlert.msg  SecurityEvent.msg
src/smart_surveillance/: package.xml  setup.cfg  setup.py
src/smart_surveillance/smart_surveillance/: camera_streamer_node.py  depth_estimator_node.py  event_logger_node.py  event_manager_node.py  object_detector_node.py  scene_analyzer_node.py  security_response_node.py  system_monitor_node.py
src/smart_surveillance_interfaces/: CMakeLists.txt  package.xml
src/smart_surveillance_interfaces/action/: SecurityAction.action
src/smart_surveillance_interfaces/msg/: DetectedObjects.msg  ObjectDepth.msg  SceneAnalysis.msg  SecurityAlert.msg  SecurityEvent.msg
src/surveillance_system/: package.xml  setup.py
src/surveillance_system/surveillance_system/nodes/: camera_stream_node.py  depth_estimator_node.py  event_logger_node.py  event_manager_node.py  object_detector_node.py  scene_analyzer_node.py  security_response_node.py  system_monitor_node.py
src/surveillance_system/surveillance_system/utils/: message_types.py
