<?xml version="1.0"?>
<package format="3">
  <name>smart_surveillance</name>
  <version>0.0.0</version>
  <description>Distributed Smart Security Surveillance System</description>
  <maintainer email="ahmed@todo.todo">ahmed</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>smart_surveillance_interfaces</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
