<?xml version="1.0"?>
<package format="3">
  <name>smart_surveillance_interfaces</name>
  <version>0.0.0</version>
  <description>Custom messages and actions for smart_surveillance</description>
  <maintainer email="ahmed@todo.todo">ahmed</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
